[gd_scene load_steps=11 format=3 uid="uid://ug7d71ixmir"]

[ext_resource type="Texture2D" uid="uid://mvh7ofkgmpky" path="res://Assets/Icons/SplitLeft.svg" id="1_505dv"]
[ext_resource type="Script" path="res://Components/PanelContainer/PanelContainer.gd" id="1_f5csc"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://Assets/Main.theme" id="1_y8d8l"]
[ext_resource type="Texture2D" uid="uid://lotajip0c4n6" path="res://Assets/Icons/SplitTop.svg" id="2_6xxv6"]
[ext_resource type="Texture2D" uid="uid://cv51u5nenveg0" path="res://Assets/Icons/SplitBottom.svg" id="3_lwsyi"]
[ext_resource type="Texture2D" uid="uid://c81i2f8d5q3sx" path="res://Assets/Icons/SplitRight.svg" id="4_w1noa"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://Assets/Icons/Edit.svg" id="5_33068"]
[ext_resource type="PackedScene" uid="uid://db5gkmntjtqmr" path="res://Components/PanelSettingContainer/PanelSettingsContainer.tscn" id="8_uv36r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6cbh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmsqh"]
bg_color = Color(0.2484, 0.2484, 0.2484, 0.760784)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y8d8l")
theme_override_styles/panel = SubResource("StyleBoxEmpty_o6cbh")
script = ExtResource("1_f5csc")

[node name="Controls" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fmsqh")

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Left" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("1_505dv")

[node name="Top" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_6xxv6")

[node name="Buttom" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lwsyi")

[node name="Right" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_w1noa")

[node name="VSeparator" type="VSeparator" parent="Controls/HBoxContainer"]
layout_mode = 2

[node name="Edit" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_33068")

[node name="VBoxContainer" type="VBoxContainer" parent="Controls"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Top" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_6xxv6")

[node name="Left" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
icon = ExtResource("1_505dv")

[node name="Right" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_w1noa")

[node name="Buttom" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lwsyi")

[node name="HSeparator" type="HSeparator" parent="Controls/VBoxContainer"]
layout_mode = 2

[node name="Edit" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_33068")

[node name="PanelSettingsContainer" parent="." instance=ExtResource("8_uv36r")]
visible = false

[connection signal="resized" from="." to="." method="_update_controls"]
[connection signal="pressed" from="Controls/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/Top" to="." method="_on_top_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/Buttom" to="." method="_on_buttom_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Top" to="." method="_on_top_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Buttom" to="." method="_on_buttom_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="type_change_pressed" from="PanelSettingsContainer" to="." method="_on_panel_settings_container_type_change_pressed"]
